--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>你好，GitHub</title>
+    <style>
+     body {
+  background-color: black;
+}
+    </style>
   </head>
   <body>
     <h1>覺得厲害</h1>
