--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     </style>
   </head>
   <body>
-    <h1>覺得厲害</h1>
+    <nav>
+      <ul>
+        <li style="white">HTML</li>
+        <li style="white">CSS</li>
+        <li style="white">JavaScript</li>
+      </ul>
+    </nav>
   </body>
 </html>
