--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="utf-8">
     <title>你好，GitHub</title>
     <style>
-     body {
-  background-color: black;
-}
+     body {background-color: black;}
+     li{color:white}
     </style>
   </head>
   <body>
     <nav>
       <ul>
-        <li style="white">HTML</li>
-        <li style="white">CSS</li>
-        <li style="white">JavaScript</li>
+        <li >HTML</li>
+        <li >CSS</li>
+        <li >JavaScript</li>
       </ul>
     </nav>
   </body>
