--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">HTML</a>
+          <a class="nav-link active" aria-current="page" href="https://github.com/claireyang5588/claireyang5588.github.io/edit/main/Second.html">HTML</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">CSS</a>
