--- a/Second.html
+++ b/Second.html
@@ -5,7 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style></style>
+     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <style>
+      body {
+        background-color: black;
+      }
+      li,
+      h2,
+      h3 {
+        color: white;
+      }
+    </style>
   </head>
-  <body>hello world!!</body>
+  <body>
+    <ol>
+    <li>display 屬性</li>
+    <li>flexbox</li>
+    </ol>
+  </body>
 </html>
