--- a/Second.html
+++ b/Second.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HTML</title>
      <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,12 +20,17 @@
       h3 {
         color: white;
       }
+      .list{{
+  margin-top: 30px;
+  padding-left: 10px;
+}
+}
     </style>
   </head>
   <body>
-    <ol>
+    <div class="list"><ol>
     <li>display 屬性</li>
     <li>flexbox</li>
-    </ol>
+    </ol></div>
   </body>
 </html>
