--- a/Second.html
+++ b/Second.html
@@ -20,10 +20,9 @@
       h3 {
         color: white;
       }
-      .list{{
+      .list{
   margin-top: 30px;
   padding-left: 10px;
-}
 }
     </style>
   </head>
