--- a/Second.html
+++ b/Second.html
@@ -12,17 +12,12 @@
       crossorigin="anonymous"
     />
     <style>
-      body {
-        background-color: black;
-      }
-      li,
-      h2,
-      h3 {
-        color: white;
-      }
-      .list{
-  margin-top: 30px;
-  padding-left: 10px;
+     * {
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
     </style>
   </head>
