--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 JavaScript
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Basics</a></li>
+                <li><a class="dropdown-item" href="#">Advanced</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#">Something else here</a>
