--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">導覽列</a>
+        <a class="navbar-brand" href="#">首頁</a>
         <button
           class="navbar-toggler"
           type="button"
