--- a/Second.html
+++ b/Second.html
@@ -32,7 +32,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">導覽列</a>
+        <a class="navbar-brand" href="https://claireyang5588.github.io/index.html">首頁</a>
         <button
           class="navbar-toggler"
           type="button"
