--- a/display.html
+++ b/display.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dispaly屬性</title>
+    <style>
+      body {
+        background-color: #303030;
+        color: white;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-size: 1.2rem;
+      }
   </head>
   <body>
     <br />
