--- a/Second.html
+++ b/Second.html
@@ -96,7 +96,7 @@
     </nav>
     <div class="list">
       <ol>
-        <li><a class="bold" href="#">display 屬性</a></li>
+        <li><a class="bold" href="https://claireyang5588.github.io/display.html">display 屬性</a></li>
         <li>
           <a class="bold" href="#">flexbox(一)</a>
 
