--- a/display.html
+++ b/display.html
@@ -12,8 +12,8 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-size: 1.2rem;
-      }
+        font-size: 1.2rem}
+      </style>
   </head>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
