--- a/display.html
+++ b/display.html
@@ -147,5 +147,10 @@
       <a href="https://imgur.com/Vi3GT3L">View post on imgur.com</a>
     </blockquote>
     <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
