--- a/display.html
+++ b/display.html
@@ -88,14 +88,11 @@
   <body>
     <br />
     <br />
-    <p>在網頁設計中的排版需要很清楚知道display屬性</p>
-    <p>才能在需要的時候，依據自己想要呈現的樣貌，製作出符合需求的版面</p>
+    <p>在網頁設計中的排版需要很清楚知道display屬性<br>才能在需要的時候，依據自己想要呈現的樣貌，製作出符合需求的版面</p>
     <br />
     <p>
-      display屬性分為：block(區塊元素）、inlink(行內元素）、inlink-block(行內區塊）
-    </p>
-    <p>
-      在CSS中可以設定display屬性，block(區塊元素）<--> inlink(行內元素）可互換
+      display屬性分為：block(區塊元素）、inlink(行內元素）、inlink-block(行內區塊)
+      <br>在CSS中可以設定display屬性，block(區塊元素）<--> inlink(行內元素）可互換
     </p>
     <br />
     <br />
@@ -119,6 +116,7 @@
       <li>padding只能設定左右</li>
       <li>ex:span、a、input、img...</li>
     </ul>
+    <br />
     <h1>inlink-block(行內區塊）</h1>
     <p>是inlink也是block</p>
     <ul>
