--- a/display.html
+++ b/display.html
@@ -96,7 +96,7 @@
     </p>
     <br />
     <br />
-    <h1>block(區塊元素)</h1>
+    <h1>★block(區塊元素)</h1>
     <ul>
       <li>預設寬度是100%</li>
       <li>可以設定寬度、高度</li>
@@ -107,7 +107,7 @@
       <li>ex:div、ul、li、p、h1...</li>
     </ul>
     <br />
-    <h1>inlink(行內元素)</h1>
+    <h1>★inlink(行內元素)</h1>
     <ul>
       <li>同一行呈現</li>
       <li>圖片、文字都不換行</li>
@@ -117,7 +117,7 @@
       <li>ex:span、a、input、img...</li>
     </ul>
     <br />
-    <h1>inlink-block(行內區塊）</h1>
+    <h1>★inlink-block(行內區塊）</h1>
     <p>是inlink也是block</p>
     <ul>
       <li>不會自動換行</li>
