--- a/flexbox_one.html
+++ b/flexbox_one.html
@@ -18,7 +18,8 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-size: 1.2rem}
+        font-size: 1.2rem};
+      span{color:red}
       </style>
   </head>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -86,6 +87,7 @@
       </div>
     </nav>
   <body>
+    <p>Flexbox彈性的盒子，可延展性很高，讓排版變得容易許多是一個非常好用的工具<br>CSS中加上<span>display:flex<span>可以彈性的調整元素的方向(flex-direction)、位置(justify-content、align-items）</p>
   <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
