--- a/flexbox_one.html
+++ b/flexbox_one.html
@@ -87,7 +87,8 @@
       </div>
     </nav>
   <body>
-    <p>Flexbox彈性的盒子，可延展性很高，讓排版變得容易許多是一個非常好用的工具<br>CSS中加上<span>display:flex<span>可以彈性的調整元素的方向(flex-direction)、位置(justify-content、align-items）</p>
+    <p>Flexbox彈性的盒子，可延展性很高，讓排版變得容易許多是一個非常好用的工具<br>CSS中加上<span>display:flex</span>可以彈性的調整元素的方向(flex-direction)、位置(justify-content、align-items
+    <br>div的display屬性是block(區塊元素)，元素會是上下呈現的方式將元素改為平行的方式呈現，可以調整display屬性<span>display: flex</span></p>
   <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
