--- a/Second.html
+++ b/Second.html
@@ -98,7 +98,7 @@
       <ol>
         <li><a class="bold" href="https://claireyang5588.github.io/display.html">display 屬性</a></li>
         <li>
-          <a class="bold" href="#">flexbox(一)</a>
+          <a class="bold" href="https://claireyang5588.github.io/flexbox_one.html">flexbox(一)</a>
 
           <ul>
             <li>flex-direction</li>
