--- a/flexbox_one.html
+++ b/flexbox_one.html
@@ -18,78 +18,140 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-size: 1.2rem};
-      span{color:red}
-      </style>
+        font-size: 1.2rem;
+      }
+      span {
+        color: red;
+      }
+    </style>
   </head>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="https://claireyang5588.github.io/index.html">首頁</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="https://claireyang5588.github.io/Second.html"
-                >HTML</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">CSS</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                JavaScript
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Basics</a></li>
-                <li><a class="dropdown-item" href="#">Advanced</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="https://claireyang5588.github.io/index.html"
+        >首頁</a
+      >
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="https://claireyang5588.github.io/Second.html"
+              >HTML</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">CSS</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              JavaScript
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Basics</a></li>
+              <li><a class="dropdown-item" href="#">Advanced</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
       </div>
-    </nav>
+    </div>
+  </nav>
   <body>
-    <p>Flexbox彈性的盒子，可延展性很高，讓排版變得容易許多是一個非常好用的工具<br>CSS中加上<span>display:flex</span>可以彈性的調整元素的方向(flex-direction)、位置(justify-content、align-items
-    <br>div的display屬性是block(區塊元素)，元素會是上下呈現的方式將元素改為平行的方式呈現，可以調整display屬性<span>display: flex</span></p>
-  <script
+    <br />
+    <br />
+    <p>
+      Flexbox彈性的盒子，可延展性很高，讓排版變得容易許多是一個非常好用的工具
+      <br />CSS中加上<span>display:flex</span>可以彈性的調整元素的方向(flex-direction)、位置(justify-content、align-items
+      <br />div的display屬性是block(區塊元素)，元素會是上下呈現的方式將元素改為平行的方式呈現，可以調整display屬性<span
+        >display: flex</span
+      >
+    </p>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="fxQXUT3">
+      <a href="https://imgur.com/fxQXUT3">View post on imgur.com</a>
+    </blockquote>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <br />
+    <h1>★flex-direction</h1>
+    <p>
+      display: flex;預設的flex-direction是row(橫向)<br />
+      調整為直向是flex-direction:columnrow-reverse(橫向反向)、column-reverse(直向反向)
+      <br />以下為row-reverse(橫向反向)的結果，跟第一張圖比較，就是順序反過來了
+    </p>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="L7bHzLw">
+      <a href="https://imgur.com/L7bHzLw">View post on imgur.com</a>
+    </blockquote>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <h1>★flex-warp</h1>
+    <p>flex-warp:nowarp(預設，不換行)</p>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="XhYtYUe">
+      <a href="https://imgur.com/XhYtYUe">View post on imgur.com</a>
+    </blockquote>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <p>flex-warp:warp(換行）</p>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="e0J13BQ">
+      <a href="https://imgur.com/e0J13BQ">View post on imgur.com</a>
+    </blockquote>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <p>flex-warp:warp-reverse(反向換行）</p>
+    <h1>★justify-content</h1>
+    <p>
+      依照外容器調整和flex-direction平行的位置
+      <br />flex-start:內容將對齊左邊起點 <br />flex-end:內容將對齊右邊起點
+      <br />center:內容將對齊畫面中間
+    </p>
+    <p>space-between:內容將平均分散且貼齊左右</p>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="EznBQ2f">
+      <a href="https://imgur.com/EznBQ2f">View post on imgur.com</a>
+    </blockquote>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+
+    <p>space-around:內容將平均分散且左右間距相同</p>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="nQaWN5B">
+      <a href="https://imgur.com/nQaWN5B">View post on imgur.com</a>
+    </blockquote>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <p>pace-evenly:內容將平均分配</p>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="cBwixw0">
+      <a href="https://imgur.com/cBwixw0">View post on imgur.com</a>
+    </blockquote>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+
+    <h1>★align-items</h1>
+
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
