--- a/flexbox_one.html
+++ b/flexbox_one.html
@@ -150,6 +150,28 @@
     <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
     <h1>★align-items</h1>
+    <p>
+      調整和flex-direction垂直的位置 <br />flex-start，內容將以上方為起點
+      <br />flex-end，內容將以下方為起點 <br />center，內容將對齊畫面中間
+      <br />stretch，此為系統預設值，主要為
+      <br />內容高度將延展為容器高度(前提是元素沒有設定長寬尺寸）
+    </p>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="U4G5MTs">
+      <a href="https://imgur.com/U4G5MTs">View post on imgur.com</a>
+    </blockquote>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <p>
+      baseline，內容將依物件元素為基準線對齊(基線，通常代表的是文字的底部)如下圖藍線就是基線，不同的元素會依照這一條線對齊
+    </p>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="Lb1O77G">
+      <a href="https://imgur.com/Lb1O77G">View post on imgur.com</a>
+    </blockquote>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
