--- a/Second.html
+++ b/Second.html
@@ -107,7 +107,7 @@
           </ul>
         </li>
         <li>
-          <a class="bold" href="#">flexbox(二)</a>
+          <a class="bold" href="https://claireyang5588.github.io/flexbox_two.html">flexbox(二)</a>
           <ul>
             <li>flex-grow</li>
             <li>flex-shrink</li>
