--- a/flexbox_one.html
+++ b/flexbox_one.html
@@ -94,88 +94,89 @@
         </div>
       </div>
     </nav>
-    <br />
-    <br />
-    <p>
-        Flexbox彈性的盒子，可延展性很高，讓排版變得容易許多是一個非常好用的工具
-        <br />CSS中加上<span>display:flex</span>可以彈性的調整元素的方向(flex-direction)、位置(justify-content、align-items
-        <br />div的display屬性是block(區塊元素)，元素會是上下呈現的方式將元素改為平行的方式呈現，可以調整display屬性<span
-          >display: flex</span
-        >
-      </p>
-      <blockquote class="imgur-embed-pub" lang="en" data-id="fxQXUT3">
-        <a href="https://imgur.com/fxQXUT3">View post on imgur.com</a>
-      </blockquote>
-      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <main>   
       <br />
-      <h1>★flex-direction</h1>
+      <br />
       <p>
-        display: flex;預設的flex-direction是row(橫向)<br />
-        調整為直向是flex-direction:columnrow-reverse(橫向反向)、column-reverse(直向反向)
-        <br />以下為row-reverse(橫向反向)的結果，跟第一張圖比較，就是順序反過來了
-      </p>
-      <blockquote class="imgur-embed-pub" lang="en" data-id="L7bHzLw">
-        <a href="https://imgur.com/L7bHzLw">View post on imgur.com</a>
-      </blockquote>
-      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-      <h1>★flex-warp</h1>
-      <p>flex-warp:nowarp(預設，不換行)</p>
-      <blockquote class="imgur-embed-pub" lang="en" data-id="XhYtYUe">
-        <a href="https://imgur.com/XhYtYUe">View post on imgur.com</a>
-      </blockquote>
-      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-      <p>flex-warp:warp(換行）</p>
-      <blockquote class="imgur-embed-pub" lang="en" data-id="e0J13BQ">
-        <a href="https://imgur.com/e0J13BQ">View post on imgur.com</a>
-      </blockquote>
-      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-      <p>flex-warp:warp-reverse(反向換行）</p>
-      <h1>★justify-content</h1>
-      <p>
-        依照外容器調整和flex-direction平行的位置
-        <br />flex-start:內容將對齊左邊起點 <br />flex-end:內容將對齊右邊起點
-        <br />center:內容將對齊畫面中間
-      </p>
-      <p>space-between:內容將平均分散且貼齊左右</p>
-      <blockquote class="imgur-embed-pub" lang="en" data-id="EznBQ2f">
-        <a href="https://imgur.com/EznBQ2f">View post on imgur.com</a>
-      </blockquote>
-      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-  
-      <p>space-around:內容將平均分散且左右間距相同</p>
-      <blockquote class="imgur-embed-pub" lang="en" data-id="nQaWN5B">
-        <a href="https://imgur.com/nQaWN5B">View post on imgur.com</a>
-      </blockquote>
-      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-      <p>pace-evenly:內容將平均分配</p>
-      <blockquote class="imgur-embed-pub" lang="en" data-id="cBwixw0">
-        <a href="https://imgur.com/cBwixw0">View post on imgur.com</a>
-      </blockquote>
-      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-  
-      <h1>★align-items</h1>
-      <p>
-        調整和flex-direction垂直的位置 <br />flex-start，內容將以上方為起點
-        <br />flex-end，內容將以下方為起點 <br />center，內容將對齊畫面中間
-        <br />stretch，此為系統預設值，主要為
-        <br />內容高度將延展為容器高度(前提是元素沒有設定長寬尺寸）
-      </p>
-      <blockquote class="imgur-embed-pub" lang="en" data-id="U4G5MTs">
-        <a href="https://imgur.com/U4G5MTs">View post on imgur.com</a>
-      </blockquote>
-      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"
-      ></script>
-      <p>
-        baseline，內容將依物件元素為基準線對齊(基線，通常代表的是文字的底部)如下圖藍線就是基線，不同的元素會依照這一條線對齊
-      </p>
-      <blockquote class="imgur-embed-pub" lang="en" data-id="Lb1O77G">
-        <a href="https://imgur.com/Lb1O77G">View post on imgur.com</a>
-      </blockquote>
-      <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+          Flexbox彈性的盒子，可延展性很高，讓排版變得容易許多是一個非常好用的工具
+          <br />CSS中加上<span>display:flex</span>可以彈性的調整元素的方向(flex-direction)、位置(justify-content、align-items
+          <br />div的display屬性是block(區塊元素)，元素會是上下呈現的方式將元素改為平行的方式呈現，可以調整display屬性<span
+            >display: flex</span
+          >
+        </p>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="fxQXUT3">
+          <a href="https://imgur.com/fxQXUT3">View post on imgur.com</a>
+        </blockquote>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <br />
+        <h1>★flex-direction</h1>
+        <p>
+          display: flex;預設的flex-direction是row(橫向)<br />
+          調整為直向是flex-direction:columnrow-reverse(橫向反向)、column-reverse(直向反向)
+          <br />以下為row-reverse(橫向反向)的結果，跟第一張圖比較，就是順序反過來了
+        </p>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="L7bHzLw">
+          <a href="https://imgur.com/L7bHzLw">View post on imgur.com</a>
+        </blockquote>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <h1>★flex-warp</h1>
+        <p>flex-warp:nowarp(預設，不換行)</p>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="XhYtYUe">
+          <a href="https://imgur.com/XhYtYUe">View post on imgur.com</a>
+        </blockquote>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <p>flex-warp:warp(換行）</p>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="e0J13BQ">
+          <a href="https://imgur.com/e0J13BQ">View post on imgur.com</a>
+        </blockquote>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <p>flex-warp:warp-reverse(反向換行）</p>
+        <h1>★justify-content</h1>
+        <p>
+          依照外容器調整和flex-direction平行的位置
+          <br />flex-start:內容將對齊左邊起點 <br />flex-end:內容將對齊右邊起點
+          <br />center:內容將對齊畫面中間
+        </p>
+        <p>space-between:內容將平均分散且貼齊左右</p>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="EznBQ2f">
+          <a href="https://imgur.com/EznBQ2f">View post on imgur.com</a>
+        </blockquote>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <br />
+        <p>space-around:內容將平均分散且左右間距相同</p>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="nQaWN5B">
+          <a href="https://imgur.com/nQaWN5B">View post on imgur.com</a>
+        </blockquote>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <p>pace-evenly:內容將平均分配</p>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="cBwixw0">
+          <a href="https://imgur.com/cBwixw0">View post on imgur.com</a>
+        </blockquote>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <br />
+        <h1>★align-items</h1>
+        <p>
+          調整和flex-direction垂直的位置 <br />flex-start，內容將以上方為起點
+          <br />flex-end，內容將以下方為起點 <br />center，內容將對齊畫面中間
+          <br />stretch，此為系統預設值，主要為
+          <br />內容高度將延展為容器高度(前提是元素沒有設定長寬尺寸）
+        </p>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="U4G5MTs">
+          <a href="https://imgur.com/U4G5MTs">View post on imgur.com</a>
+        </blockquote>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+          crossorigin="anonymous"
+        ></script>
+        <p>
+          baseline，內容將依物件元素為基準線對齊(基線，通常代表的是文字的底部)如下圖藍線就是基線，不同的元素會依照這一條線對齊
+        </p>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="Lb1O77G">
+          <a href="https://imgur.com/Lb1O77G">View post on imgur.com</a>
+        </blockquote>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script></main>
       <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
