--- a/flexbox_one.html
+++ b/flexbox_one.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dispaly屬性</title>
+    <title>flex(一)</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -132,10 +132,9 @@
         <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
         <p>flex-warp:warp-reverse(反向換行）</p>
         <h1>★justify-content</h1>
-        <p>
-          依照外容器調整和flex-direction平行的位置
-          <br />flex-start:內容將對齊左邊起點 <br />flex-end:內容將對齊右邊起點
-          <br />center:內容將對齊畫面中間
+        <p>依照外容器調整和flex-direction平行的位置
+        <br />flex-start:內容將對齊左邊起點 <br />flex-end:內容將對齊右邊起點
+        <br />center:內容將對齊畫面中間
         </p>
         <p>space-between:內容將平均分散且貼齊左右</p>
         <blockquote class="imgur-embed-pub" lang="en" data-id="EznBQ2f">
@@ -155,11 +154,10 @@
         <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
         <br />
         <h1>★align-items</h1>
-        <p>
-          調整和flex-direction垂直的位置 <br />flex-start，內容將以上方為起點
-          <br />flex-end，內容將以下方為起點 <br />center，內容將對齊畫面中間
-          <br />stretch，此為系統預設值，主要為
-          <br />內容高度將延展為容器高度(前提是元素沒有設定長寬尺寸）
+        <p>調整和flex-direction垂直的位置 <br />flex-start，內容將以上方為起點
+        <br />flex-end，內容將以下方為起點 <br />center，內容將對齊畫面中間
+        <br />stretch，此為系統預設值，主要為
+        <br />內容高度將延展為容器高度(前提是元素沒有設定長寬尺寸）
         </p>
         <blockquote class="imgur-embed-pub" lang="en" data-id="U4G5MTs">
           <a href="https://imgur.com/U4G5MTs">View post on imgur.com</a>
@@ -170,13 +168,12 @@
           integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
           crossorigin="anonymous"
         ></script>
-        <p>
-          baseline，內容將依物件元素為基準線對齊(基線，通常代表的是文字的底部)如下圖藍線就是基線，不同的元素會依照這一條線對齊
-        </p>
+        <p>baseline，內容將依物件元素為基準線對齊(基線，通常代表的是文字的底部)如下圖藍線就是基線，不同的元素會依照這一條線對齊</p>
         <blockquote class="imgur-embed-pub" lang="en" data-id="Lb1O77G">
           <a href="https://imgur.com/Lb1O77G">View post on imgur.com</a>
         </blockquote>
-        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script></main>
+        <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      </main>
       <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
