--- a/flexbox_one.html
+++ b/flexbox_one.html
@@ -95,14 +95,11 @@
       </div>
     </nav>
     <main>   
-      <br />
-      <br />
-      <p>
-          Flexbox彈性的盒子，可延展性很高，讓排版變得容易許多是一個非常好用的工具
-          <br />CSS中加上<span>display:flex</span>可以彈性的調整元素的方向(flex-direction)、位置(justify-content、align-items
-          <br />div的display屬性是block(區塊元素)，元素會是上下呈現的方式將元素改為平行的方式呈現，可以調整display屬性<span
-            >display: flex</span
-          >
+        <br />
+        <br />
+        <p>Flexbox彈性的盒子，可延展性很高，讓排版變得容易許多是一個非常好用的工具
+            <br />CSS中加上<span>display:flex</span>可以彈性的調整元素的方向(flex-direction)、位置(justify-content、align-items
+            <br />div的display屬性是block(區塊元素)，元素會是上下呈現的方式將元素改為平行的方式呈現，可以調整display屬性<span>display: flex</span>
         </p>
         <blockquote class="imgur-embed-pub" lang="en" data-id="fxQXUT3">
           <a href="https://imgur.com/fxQXUT3">View post on imgur.com</a>
@@ -110,10 +107,9 @@
         <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
         <br />
         <h1>★flex-direction</h1>
-        <p>
-          display: flex;預設的flex-direction是row(橫向)<br />
-          調整為直向是flex-direction:columnrow-reverse(橫向反向)、column-reverse(直向反向)
-          <br />以下為row-reverse(橫向反向)的結果，跟第一張圖比較，就是順序反過來了
+        <p>display: flex;預設的flex-direction是row(橫向)
+        <br />調整為直向是flex-direction:columnrow-reverse(橫向反向)、column-reverse(直向反向)
+        <br />以下為row-reverse(橫向反向)的結果，跟第一張圖比較，就是順序反過來了
         </p>
         <blockquote class="imgur-embed-pub" lang="en" data-id="L7bHzLw">
           <a href="https://imgur.com/L7bHzLw">View post on imgur.com</a>
@@ -163,11 +159,7 @@
           <a href="https://imgur.com/U4G5MTs">View post on imgur.com</a>
         </blockquote>
         <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-        <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-          crossorigin="anonymous"
-        ></script>
+        <br>
         <p>baseline，內容將依物件元素為基準線對齊(基線，通常代表的是文字的底部)如下圖藍線就是基線，不同的元素會依照這一條線對齊</p>
         <blockquote class="imgur-embed-pub" lang="en" data-id="Lb1O77G">
           <a href="https://imgur.com/Lb1O77G">View post on imgur.com</a>
