--- a/flexbox_one.html
+++ b/flexbox_one.html
@@ -55,7 +55,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">CSS</a>
+              <a class="nav-link" href="https://claireyang5588.github.io/CSS.html">CSS</a>
             </li>
             <li class="nav-item dropdown">
               <a
