--- a/CSS.html
+++ b/CSS.html
@@ -96,10 +96,26 @@
     </nav>
     <div class="list">
       <ol>
+          <li><a class="bold" href="https://claireyang5588.github.io/display.html">display 屬性</a></li>
+        <li>
+          <a class="bold" href="https://claireyang5588.github.io/flexbox_one.html">flexbox(一)</a>
+          <ul>
+            <li>flex-direction</li>
+            <li>flex-warp</li>
+            <li>justify-content</li>
+          </ul>
+        </li>
+        <li>
+          <a class="bold" href="https://claireyang5588.github.io/flexbox_two.html">flexbox(二)</a>
+          <ul>
+            <li>flex-grow</li>
+            <li>flex-shrink</li>
+            <li>flex-basis</li>
+          </ul>
+        </li>
         <li><a class="bold" href="#">CSS Selectors(選擇器)</a></li>
         <li>
           <a class="bold" href="#">CSS position</a>
-
           <ul>
             <li>static(靜態的)</li>
             <li>relative(相對的)</li>
