--- a/Second.html
+++ b/Second.html
@@ -96,22 +96,21 @@
     </nav>
     <div class="list">
       <ol>
-        <li><a class="bold" href="https://claireyang5588.github.io/display.html">display 屬性</a></li>
+        <li><a class="bold" href="#">HTML基本骨架</a></li>
         <li>
-          <a class="bold" href="https://claireyang5588.github.io/flexbox_one.html">flexbox(一)</a>
-
+          <a class="bold" href="#">標題元素</a>
           <ul>
-            <li>flex-direction</li>
-            <li>flex-warp</li>
-            <li>justify-content</li>
+            <li>標題</li>
+            <li>段落</li>
+            <li>項目列表</li>
           </ul>
         </li>
         <li>
-          <a class="bold" href="https://claireyang5588.github.io/flexbox_two.html">flexbox(二)</a>
+          <a class="bold" href="#">表格製作</a>
           <ul>
-            <li>flex-grow</li>
-            <li>flex-shrink</li>
-            <li>flex-basis</li>
+            <li>表格基本標籤</li>
+            <li>表格邊框</li>
+            <li>表格的標題</li>
           </ul>
         </li>
       </ol>
