--- a/CSS.html
+++ b/CSS.html
@@ -112,7 +112,7 @@
             <li>flex-basis</li>
           </ul>
         </li>
-        <li><a class="bold" href="#">CSS Selectors(選擇器)</a></li>
+        <li><a class="bold" href="https://claireyang5588.github.io/CSS_Selectors.html">CSS Selectors(選擇器)</a></li>
         <li>
           <a class="bold" href="#">CSS position</a>
           <ul>
