--- a/CSS_Selectors.html
+++ b/CSS_Selectors.html
@@ -67,7 +67,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="https://claireyang5588.github.io/Second.html"
+                href="https://claireyang5588.github.io/HTML.html"
                 >HTML</a
               >
             </li>
