--- a/display.html
+++ b/display.html
@@ -19,6 +19,9 @@
         padding: 0;
         box-sizing: border-box;
         font-size: 1.2rem}
+       main {
+        margin: 0 300px;
+      }
       </style>
   </head>
   <body>
