--- a/CSS_Selectors.html
+++ b/CSS_Selectors.html
@@ -40,6 +40,11 @@
       .part {
         color: blue;
       }
+        @media screen and (max-width: 800px) {
+        main {
+          margin: 10px;
+        }
+      }
     </style>
   </head>
   <body>
