--- a/CSS_Selectors.html
+++ b/CSS_Selectors.html
@@ -41,6 +41,7 @@
         color: blue;
       }
         @media screen and (max-width: 800px) {
+        body{ font-size: 1.0rem}
         main {
           margin: 10px;
         }
