--- a/CSS.html
+++ b/CSS.html
@@ -124,7 +124,7 @@
           </ul>
         </li>
         <li>
-          <a class="bold" href="#">元素邊界</a>
+          <a class="bold" href="https://claireyang5588.github.io/element.html">元素邊界</a>
           <ul>
             <li>margin(邊界)</li>
             <li>padding(邊距)</li>
