--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Claire's Bolg</title>
   <script>
       window.difyChatbotConfig = {
-        token: "f5zmUkV3e7kaCUBp",
+        token: "hrU94t2qI5jQT6jc",
         systemVariables: {
           // user_id: 'YOU CAN DEFINE USER ID HERE',
           // conversation_id: 'YOU CAN DEFINE CONVERSATION ID HERE, IT MUST BE A VALID UUID',
@@ -18,7 +18,7 @@
     </script>
     <script
       src="https://udify.app/embed.min.js"
-      id="f5zmUkV3e7kaCUBp"
+      id="hrU94t2qI5jQT6jc"
       defer
     ></script>
     <link
